package hrvv;


option java_package = "hrv.codec.protobuf";
option java_outer_classname = "RespondProto";

message Respond {
	extensions 100 to max;                    //100???????
	enum Type {
	      GET_NET_RESPOND = 0x003A;
		  HEART_BEAT = 0x0040;
          SET_POWER_RESPOND = 0x0080;
          SET_GPIO_RESPOND = 0x0081;
          SET_FREQUENCY_POINT_RESPOND = 0x0082;
          SET_CARRIER_RESPOND = 0x0085;
          GET_CARRIER_RESPOND = 0x008F;
          SET_GEN2_RESPOND = 0x0087;
          SET_WORK_ANT_RESPOND = 0x0088;
          SET_FREQUENCY_AREA_RESPOND = 0x0089;
          GET_FREQUENCY_POINT_RESPOND = 0x008D;
          GET_FREQUENCY_AREA_RESPOND = 0x0091;
          GET_TEMPERATURE_RESPOND = 0x0092;
          GET_GPIO_RESPOND = 0x0093;
          GET_GEN2_RESPPOND = 0x0094;
          START_SINGLE_EPC_RESPOND = 0x0096;
          START_MULTI_EPC_RESPOND = 0x0097;
          SET_SINGLE_CHANNEL_RESPOND = 0x009D;
          GET_HARD_VERSION_RESPOND = 0x008A;
          GET_FIRM_VERSION_RESPOND = 0x008B;
          GET_POWER_RESPOND = 0x008C;
          GET_WORK_ANT_RESPOND = 0x0090;
          READ_TAGS_RESPOND = 0x0099;
          WRITE_TAGS_RESPOND = 0x009A;
          LOCK_TAGS_RESPOND = 0x009B;
          KILL_TAGS_RESPOND = 0x009C;
          GET_WORK_INTERRUPTED_RESPOND = 0x009E;
          SET_WORK_TIME_RESPOND = 0x009F;
          GET_WORK_TIME_RESPOND = 0x00A0;
          SET_FASTID_RESPOND = 0x00A1;
          GET_FASTID_RESPOND = 0x00A2;
          SET_QT_RESPOND = 0x00A6;
          GET_QT_RESPOND = 0x00A7;
          SET_TAGFOCUS_RESPOND = 0x00A9;
          GET_TAGFOCUS_RESPOND = 0x00AA;
          GET_COMMUNICATION_INFO_RESPOND = 0x00AB;
          ERROR_RESPOND = 0x000A;
          SET_COMMUNICATION_INFO_RESPOND = 0x00C3;
          GET_WORK_MODE_RESPOND = 0x00C4;
          SET_WORK_MODE_RESPOND = 0x00C7;
		  SET_GPIO_OUT_RESPOND = 0x003E;
          SET_MAC_ADD_RESPOND = 0x00C8;
          GET_MAC_ADD_RESPOND = 0x00C9;
          GET_SIM_RESPOND = 0x00CB;
          SET_SIM_RESPOND = 0x00CC;
          SET_WIFI_RESPOND = 0x00CF;
          GET_WIFI_RESPOND = 0x00D1;                   
          SET_MQTT_RESPOND = 0x00D5;
          GET_MQTT_RESPOND = 0x00D6;                  
          SET_MQTT_THEME_RESPOND = 0x00D7;
          GET_MQTT_THEME_RESPOND = 0x00D8;
		  SET_BEEP_RESPOND = 0x00D9;
		  INVENTORY_RESPOND = 0x00DA;
		  INFRA_RED_DIR_RESPOND = 0x00DB;
		  DOOR_STATUS_RESPOND = 0x00DC;
		  CHECK_MULTI_EPC_RESPOND = 0x00DD;
		  GET_MULTI_ID = 0x00F1;
		  START_INFO = 0x00F3;
		  DOWN_DATA = 0x00FA;
		  DOWN_DATA_RESPOND = 0x00FB;
		  READER_CONNECT_RESPOND = 0x5002;
		  READER_DISCONNECT_RESPOND = 0x5003;
		  FILE_MOVE_REPORT_EVENT = 0x5004;


         FIRMWARE_VERSION_RESPOND = 0x208A;
         QUERY_ANT_CONNECTION_STATUS_RESPOND = 0x20D9;
         QUERY_SPECIFYING_ANT_CONNECTION_STATUS_RESPOND = 0x20DA;      
         ENABLE_SPECIFYING_ANT_RESPOND = 0x20DB;
         AUTO_ENABLE_ANT_RESPOND = 0x20DC;
         SINGLE_QUERY_UID_RESPOND = 0x2096;
		 SINGLE_END_QUERY_UID_RESPOND = 0x2196;
         CIRCLE_QUERY_UID_RESPOND = 0x2097;
         STOP_QUERY_UID_RESPOND = 0x2098;
         QUERY_DATA_RESPOND = 0x2099;
         WRITE_DATA_RESPOND = 0x209A;
         TAG_EAS_SETTING_RESPOND = 0x20DD;
         TAG_PASSWORD_SETTING_RESPOND = 0x20DE;
         HF_GET_WORK_MODE_RESPOND = 0x20C4;
         HF_SET_WORK_MODE_RESPOND = 0x20C7;
         HF_GET_POWER_RESPOND = 0x208C;
         HF_SET_POWER_RESPOND = 0x2080;
	}
	required Type type = 1;
	required string DevID = 2;
	optional string timestamp = 3;

}